# status-bar

./: .gitignore  .gitmodules  LICENSE  README.md  meson.build
src/: config.h  main.c  meson.build
src/module/: meson.build  module.c
src/module/include/: module.h
src/module/storage_usage_module/: meson.build  storage_usage_module.c
src/module/storage_usage_module/include/: storage_usage_module.h
src/sensor/: meson.build
src/sensor/storage_sensor/: meson.build  storage_sensor.c
src/sensor/storage_sensor/include/: storage_sensor.h
